# ffparaim

./: LICENSE  MANIFEST.in  README.md  __init__.py  atomdb.py  environment.yml  ffderiv.py  ffparaim.py  main.py  mdtools.py  orcaff.py  pyproject.toml  setup.cfg  setup.py  stats.py  utils.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
examples/complex/: main.py
examples/gromacs/: main.py
examples/solvent/: main.py
examples/validation/: validation.py
ffparaim/: .gitattributes  .lgtm.yml  CODE_OF_CONDUCT.md  __init__.py  _version.py  atomdb.py  ffderiv.py  ffparaim.py  main.py  mdtools.py  orcaff.py  out.py  output.py  qmtools.py  restraints.py  stats.py  units.py  utils.py
ffparaim/.github/workflows/: CI.yaml
ffparaim/data/: d-mbis_openff_unconstrained-2.0.0.offxml  orca_pol_corr.inp  orca_pol_corr.out  orca_qmmm.inp  orca_uks.inp  orca_uks.molden.input  rcubed_table.json  system.xml
ffparaim/examples/: main.py
ffparaim/examples/complex/: main.py
ffparaim/examples/solvent/: main.py
ffparaim/tests/: test_atomdb.py  test_ffderiv.py  test_ffparaim.py  test_mdtools.py  test_output.py  test_qmtools.py  test_restraints.py  test_stats.py
