[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffparaim"
authors = [
  { name="QCMM Team", email="qcmm@udec.cl" },
]
description = "ffparaim performs derivation of non-bonded non-polarizable force field parameters from Atom-in-Molecules density partitioning."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["openff-toolkit>=0.10.6"]
dynamic = ["version"]

[tool.setuptools]
py-modules = []

[project.urls]
Issues = "https://github.com/qcmm/ffparaim/issues"
Source = "https://github.com/qcmm/ffparaim/"
Changelog = "https://github.com/qcmm/ffparaim/blob/main/CHANGELOG.md"

[project.scripts]
ffparaim = "ffparaim.__main__:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools_scm]
write_to = "ffparaim/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
